--- a/first.html
+++ b/first.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beach Guide For Tourists</title>
+    <title>Beach-Guide For Tourists</title>
     <style>
         .button {
             transition-duration: 0.4s;
